--- a/English.html
+++ b/English.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -75,7 +75,7 @@
                 <p>"Very, very nice museum. Worth a visit, actually mandatory. The building alone is very beautiful, what wonderful details, colors, and murals. You can look at that for hours alone."</p>
             </div>
 
-            <div class="review" id="review2"> Piet<br>
+            <div class="review" id="review2"> Youssef<br>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
