--- a/index.html
+++ b/index.html
@@ -43,11 +43,18 @@
             </div>
         </div>
         <ul class="thumb">
-            <li><img src="/Images/img1.png" onclick="imgSlider('Images/img6.png')"></li>
-             <li><img src="/Images/img2.png" onclick="imgSlider('Images/img2.png')"></li>
-            <li><img src="/Images/img3.png" onclick="imgSlider('Images/img3.png')"></li>
-            <li><img src="/Images/img4.png" onclick="imgSlider('Images/img4.png')"></li>
-            <li><img src="/Images/img5.png" onclick="imgSlider('Images/img5.png')"></li>
+            <li>
+                <img src="/Images/img1.png" onclick="imgSlider('Images/img6.png')">
+            </li>
+            <li>
+                <img src="/Images/img2.png" onclick="imgSlider('Images/img2.png')">
+            </li>
+            <li>
+                <img src="/Images/img3.png" onclick="imgSlider('Images/img3.png')"></li>
+            <li>
+                <img src="/Images/img4.png" onclick="imgSlider('Images/img4.png')"></li>
+            <li>
+                <img src="/Images/img5.png" onclick="imgSlider('Images/img5.png')"></li>
         </ul>
     </section>
     <section class="mid">
@@ -72,10 +79,12 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
-                <p>"Zeer, zeer mooi museum. Het bezoeken waard, nou eigenlijk verplicht. Het gebouw alleen is al zeer fraai, wat een schitterende details, kleuren, en muurschilderingen. Alleen daar kan je al uren naar kijken."</p>
+                <ul>
+                    <li class="Review">"Zeer, zeer mooi museum. Het bezoeken waard, nou eigenlijk verplicht. Het gebouw alleen is al zeer fraai, wat een schitterende details, kleuren, en muurschilderingen. Alleen daar kan je al uren naar kijken."</li>
+                </ul>
             </div>
 
-            <div class="review" id="review2"> Piet<br>
+            <div class="review" id="review2"> Youssef<br>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
